examples/checker_tests/bad/cast-across-widths-down.p4
int<9> bad_cast(bit<8> x) {
    return (int<9>)x;
}
